--- a/ruoyi-ui/public/index.html
+++ b/ruoyi-ui/public/index.html
@@ -205,4 +205,5 @@
         </div>
 	</div>
   </body>
+  <script type="text/javascript" src="//api.map.baidu.com/api?type=webgl&v=1.0&ak=y6vFgLLDcwlW7ZlxSMDLIsgCsrXrDIlu"></script>
 </html>
