--- a/ruoyi-ui/public/index.html
+++ b/ruoyi-ui/public/index.html
@@ -206,4 +206,5 @@
 	</div>
   </body>
   <script type="text/javascript" src="//api.map.baidu.com/api?type=webgl&v=1.0&ak=y6vFgLLDcwlW7ZlxSMDLIsgCsrXrDIlu"></script>
+  <script src="//bj.bcebos.com/v1/mapopen/api-demos/js/mapStyle.js"></script>
 </html>
